Update `GET/api/posts` for pagenation
