# openapi/openapi.yaml
@@ -13,14 +13,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/currentUser'
+                $ref: "#/components/schemas/currentUser"
   /api/products:
     get:
       operationId: fetchProducts
       summary: Get and Search Products
       parameters:
         - in: query
-          name: page
+          name: next_page
           schema:
             type: integer
         - in: query
@@ -40,17 +40,26 @@ paths:
                   products:
                     type: array
                     items:
-                      $ref: '#/components/schemas/products'
+                      $ref: "#/components/schemas/products"
   /api/posts:
     get:
       operationId: fetchPosts
       summary: Get Products
       parameters:
         - in: query
-          name: limit
+          name: per
+          required: true
+          description: per page
           schema:
             type: integer
         - in: query
+          name: page
+          required: true
+          description: next page
+          schema:
+            type: integer
+        - in: query
+          required: false
           name: user_id
           schema:
             type: integer
@@ -62,12 +71,15 @@ paths:
               schema:
                 type: object
                 required:
+                  - total_pages
                   - posts
                 properties:
+                  total_pages:
+                    type: number
                   posts:
                     type: array
                     items:
-                      $ref: '#/components/schemas/posts'
+                      $ref: "#/components/schemas/posts"
     post:
       operationId: createPost
       summary: Create Products
@@ -75,7 +87,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/post'
+              $ref: "#/components/schemas/post"
       responses:
         200:
           description: create post
@@ -99,7 +111,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/post'
+                $ref: "#/components/schemas/post"
     put:
       operationId: updatePost
       summary: Update Post
@@ -113,7 +125,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/post'
+              $ref: "#/components/schemas/post"
       responses:
         200:
           description: update post
@@ -146,7 +158,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/contact'
+              $ref: "#/components/schemas/contact"
       responses:
         200:
           description: post contact
